--- a/.env
+++ b/.env
@@ -3,3 +3,8 @@ DB_NAME=postgres
 USER_NAME=products
 PASSWORD=mypassword
 PORT=5434
+
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
+REDIS_DB=0
+REDIS_PASSWORD=
